# slottie

./: README.md  settings.gradle.kts
.dist/rlottie_aar/: AndroidManifest.xml
app/: build.gradle.kts
app/src/androidTest/java/com/example/samlottie/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: loading.json
app/src/main/cpp/: CMakeLists.txt  native-rlottie.cpp
app/src/main/java/com/example/samlottie/: MainActivity.kt
app/src/main/java/com/example/samlottie/rlottie/: NativeRlottie.kt  RlottieView.kt
app/src/main/java/com/example/samlottie/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/samlottie/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
